# ornamentalist

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basics.py  cli.py  submitit_basic.py  tui.py
examples/diffusion_transformer/: README.md  distributed.py  dit.py  main.py  mnist.py  trainer.py
ornamentalist/: __init__.py  tuiconf
tests/: test_ornamentalist.py
