[project]
name = "ornamentalist"
version = "1.0.0"
description = "Hackable hyperparameter configuration with decorators."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ornamentalist"
module-root = ""
