[project]
name = "ornamentalist"
version = "2.1.0"
description = "Hackable hyperparameter configuration with decorators."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ornamentalist"
module-root = ""

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "setuptools>=80.9.0",
    "submitit>=1.5.3",
]
